fix errors and remove useless instructions
Signed-off-by: Paimon <paimonaletka@gmail.com>